html part 2 ex 3

--- a/form.html
+++ b/form.html
@@ -25,9 +25,11 @@
 
 <main>
   <article>
+    <h2>Form for Personal Data Submission</h2>
+
     <section>
       <form action="#" method="post" autocomplete="on">
-        <h2>Fill in your details:</h2>
+        <h3>Fill in your details:</h3>
 
         <!-- a. Name -->
         <label for="firstname">First Name:</label>
