--- a/graphics.html
+++ b/graphics.html
@@ -26,8 +26,9 @@
 
     <main>
       <article>
+        <h2>Exploring SVG Graphics in HTML5</h2>
         <section>
-          <h2>SVG Graphics Examples</h2>
+          <h3>SVG Graphics Examples</h3>
           
           <!-- SVG example -->
           <svg width="500" height="200" role="img">
