--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
     <main>
       <article>
+        <h2>Web Systems Programming Overview</h2>
+
         <section>
-          <h2>About this website</h2>
+          <h3>About this website</h3>
           <p>Learn more about <b>Web Systems Programming</b> course.</p>
           <details>
             <summary>Course Objectives</summary>
@@ -40,7 +42,7 @@
         </section>
 
         <section>
-          <h2>Navigation tips</h2>
+          <h3>Navigation tips</h3>
           <p>Use the menu above to explore the different sections of the website.</p>
         </section>
       </article>
