--- a/lists.html
+++ b/lists.html
@@ -26,22 +26,24 @@
     
     <main>
       <article>
+        <h2>Understanding Lists in HTML5</h2>
+
         <section>
-          <h2>Numbered List</h2>
+          <h3>Numbered List</h3>
           <ol>  
             <li>First item</li>
             <li>Second item</li>
             <li>Third item</li> 
           </ol>
 
-          <h2>Unnumbered List</h2>
+          <h3>Unnumbered List</h3>
           <ul>
             <li>First item</li>
             <li>Second item</li>
             <li>Third item</li>
           </ul>
 
-          <h2>List Nesting</h2>
+          <h3>List Nesting</h3>
           <ul>
             <li>Fruits
               <ul>
@@ -59,7 +61,7 @@
             </li>
           </ul>
 
-          <h2>Definition List</h2>
+          <h3>Definition List</h3>
           <dl>  
             <dt>HTML</dt>
             <dd>HyperText Markup Language</dd>
