--- a/references.html
+++ b/references.html
@@ -26,16 +26,18 @@
 
     <main>
       <article>
+        <h2>Understanding Links and References</h2>
+
         <section>
-          <h2>Links to Other Pages</h2>
+          <h3>Links to Other Pages</h3>
           <p>
             Visit my <a href="text.html">Text page</a> (another page on this site).<br>
-            Check out <a href="https://www.w3schools.com" target="_blank">W3Schools</a> (external website).
+            Check out <a href="https://www.w3schools.com" target="_blank" rel="noopener noreferrer">W3Schools</a> (external website).
           </p>
         </section>
 
         <section>
-          <h2>Links to Identifiers on This Page</h2>
+          <h3>Links to Identifiers on This Page</h3>
           <p>
             Jump to the <a href="#top">top of this page</a>.<br>
             Jump to the <a href="#footer">footer section</a>.
@@ -46,7 +48,7 @@
           <summary>Reference Tips</summary>
           <ul>
             <li>Use descriptive link text for accessibility.</li>
-            <li>External links should open in a new tab with <code>target="_blank"</code>.</li>
+            <li>External links should open in a new tab with <code>target="_blank"</code> and <code>rel="noopener noreferrer"</code>.</li>
             <li>Use IDs for in-page navigation.</li>
           </ul>
         </details>
