--- a/tables.html
+++ b/tables.html
@@ -26,8 +26,10 @@
 
     <main>
       <article>
+        <h2>Understanding Tables in HTML5</h2>
+
         <section>
-          <h2>Standard Table</h2>
+          <h3>Standard Table</h3>
           <p>Text before table.</p>
           <table border="5">
             <caption>First table</caption>
@@ -59,7 +61,7 @@
             </tfoot>
           </table>
 
-          <h2>Table with Combined Cells</h2>
+          <h3>Table with Combined Cells</h3>
           <p>Example with merged rows and columns:</p>
           <table border="5">
             <caption>Second table with colspan and rowspan</caption>
@@ -98,7 +100,7 @@
             </tfoot>
           </table>
 
-          <h2>Nested Tables</h2>
+          <h3>Nested Tables</h3>
           <table border="5">
             <tr>
               <td>
