--- a/text.html
+++ b/text.html
@@ -26,12 +26,14 @@
 
     <main>
       <article>
+        <h2>HTML Text and Formatting</h2>
+
         <section>
-          <h2>Text Examples</h2>
+          <h3>Text Examples</h3>
 
           <!-- Headers -->
-          <h3>Header Level 3</h3>
           <h4>Header Level 4</h4>
+          <h5>Header Level 5</h5>
 
           <!-- Paragraphs -->
           <p>
